--- a/reports/report.html
+++ b/reports/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,1405],[],[[5,0,0,[6],[1,852,50],[]],[7,0,0,[8],[1,907,27],[]],[9,0,0,[10],[1,936,85],[]],[11,0,0,[12],[1,1023,114],[]],[13,0,0,[14],[1,1272,130],[]]],[],[5,5,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,1277],[],[[5,0,0,[6],[1,849,35],[]],[7,0,0,[8],[1,887,37],[]],[9,0,0,[10],[1,926,55],[]],[11,0,0,[12],[1,1070,103],[]],[13,0,0,[14],[1,1174,101],[]]],[],[5,5,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Produtos Tests","*D:\\Desktop\\Robotron_Sprint 6\\tests\\produtos_tests.robot","*../tests/produtos_tests.robot","*<p>Arquivo de Testes para o Endpoint /produtos\x3c/p>","*Cenario: GET Todos os produtos 200","*GETPRODUTO","*Cenario: GET Buscar /usuarios/_id","*GETPRODUTOID","*Cenario: POST Criar Produto 201","*POSTPRODUTO","*Cenario: DELETE Excluir Produto 200","*DELETEPRODUTO","*Cenario: PUT Editar produto/_id","*PUTPRODUTO"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Carrinho Tests","*D:\\Desktop\\Robotron_Sprint 6\\tests\\carrinho_tests.robot","*../tests/carrinho_tests.robot","*<p>Arquivo de Testes para o Endpoint /carrinho\x3c/p>","*Cenario: GET Buscar carrinhos","*BUSCARCARRINHO","*Cenario: GET Buscar Carrinho Por Id","*BUSCARID","*Cenario: DELETE Excluir Carrinho","*EXCLUIRCARRINHO","*Cenario: DELETE Compra Concluida","*COMPRACONCLUIDA","*Cenario: POST Criar Carrinho","*POSTCRIARCARRINHO"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":5,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"DELETEPRODUTO","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"GETPRODUTO","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"GETPRODUTOID","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"POSTPRODUTO","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"PUTPRODUTO","pass":1,"skip":0}],[{"elapsed":"00:00:01","fail":0,"id":"s1","label":"Produtos Tests","name":"Produtos Tests","pass":5,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":5,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"BUSCARCARRINHO","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"BUSCARID","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"COMPRACONCLUIDA","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"EXCLUIRCARRINHO","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"POSTCRIARCARRINHO","pass":1,"skip":0}],[{"elapsed":"00:00:01","fail":0,"id":"s1","label":"Carrinho Tests","name":"Carrinho Tests","pass":5,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1657747780010;
+window.output["baseMillis"] = 1657782038316;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 1470;
+window.output["generated"] = 1312;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
